Reduced window header height Reduced tabs height Fix documents panel collapse transition

--- a/src/style.css
+++ b/src/style.css
@@ -140,7 +140,7 @@ textarea {
 .button-rectangle {
   display: flex;
   align-items: center;
-  padding: 0.6rem 1rem;
+  padding: .5rem 15px;
   background: none;
   border: 0;
 }
@@ -204,9 +204,12 @@ th .iconify {
 }
 
 .hide:not(.overlay, .modal-body, .position-absolute, .w-100, button) {
+  height: 0 !important;
+}
+
+.hide:not(.overlay, .modal-body, .position-absolute, .w-100, button, .mdc-tab-bar) {
   max-height: 0 !important;
   min-height: 0 !important;
-  height: 0 !important;
 }
 
 table {
@@ -806,8 +809,13 @@ textarea::-webkit-scrollbar {
 }
 
 .mdc-tab-bar {
+  height: 2.5rem;
   transition: var(--transition);
   border-bottom: 1px solid var(--bs-gray-300);
+}
+
+.mdc-tab {
+  height: 2.5rem;
 }
 
 .mdc-tab:not(:first-child),
